# Cato

./: .gitignore  CHANGELOG.md  CONFIG_REFERENCE.md  README.md  WARP.md  pyproject.toml
Project/: PROGRESS.md
Project/Notes/: Jan 14 at 11-01.md  agents.md  ideas.md
Project/Plans/: Cato Agent Implementation Plan.md
Project/Reports/: 2026-01-14_spec_review_claude_opus_4_5.md  2026-01-15_084913-Review_Repo_Specs_with_Critique_Report_GPT-5_2-high.md  2026-01-15_171104-Comprehensive_Codebase_Quality_Review.md  2026-01-15_reports_summary.md  2026-01-15_reports_summary_annotated.md  agents.md
Project/Sessions/: 2026-01-19-argsproductivity.txt  2026-01-19-id-like-for-prompts-and-responses-to-display-a-lit.txt  2026-01-19-implement-techspeclistsmd.txt  2026-01-19-this-session-is-being-continued-from-a-previous-co.txt  20260115_083007-Remove_Memory_Creation_References.md  20260115_083057-Critically_Review_Repo_Specs.md  20260115_083112-Update_WARP_md_With_Spec_Changes.md  20260115_083135-Create_WARP_md_for_Codebase.md  20260115_083151-Design_Project_Architecture_Approach.md  20260115_083219-Read_And_Follow_FULL_SPEC_PROMPT_md.md  20260115_165050-Process_Comments_in_Reports_Summary.md  20260115_170144-Create_Command_Line_Args_Specs.md  20260115_191803-Run_Cato_Command_Instructions.md  20260115_194244-Configure_Text_Color_Styles.md  20260115_200709-Agent_Implementation_Plan_for_Cato.md  20260115_205752-Agent_Actions_For_Code_Changes.md  (+7 more)
cato/: README.md  __init__.py  __main__.py  app.py  bootstrap.py  main.py
doc/: CONFIG_REFERENCE.md
tests/: __init__.py  conftest.py
(+159 files in other folders)
