[project]
name = "cato"
version = "0.1.0"
description = "Terminal-first LLM chat client with productivity features"
authors = [
    {name = "Alex Loveless", email = "alex@alexloveless.uk"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.15",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "chromadb>=0.4",
    "openai>=1.0",
    "anthropic>=0.21",
    "google-generativeai>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
cato = "cato.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
